Add endpoint for updating the settings of a project